--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,10 +19,15 @@ h3 {
   font-weight: bold;
 }
 
-h6 {
+h5 {
   font-size: 18px;
   color: white;
-  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+}
+
+h6 {
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
 }
 
 #designedin {
